--- a/Novateca.Web/Novateca.Web/Novateca.Web.csproj
+++ b/Novateca.Web/Novateca.Web/Novateca.Web.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="Sendgrid" Version="9.9.0" />
+    <PackageReference Include="vue" Version="2.5.16" />
   </ItemGroup>
 
 </Project>
