--- a/Novateca.Web/Novateca.Web/Novateca.Web.csproj
+++ b/Novateca.Web/Novateca.Web/Novateca.Web.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.1.3" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="7.6.105" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.1" />
